<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_name"
        style="@style/fontHeadPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_8"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/input_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_nickname"
        android:importantForAutofill="no"
        android:layout_marginTop="@dimen/space_8"
        android:ems="10"
        android:layout_marginBottom="@dimen/space_8"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/fontBodyPrimary"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/done"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/fontSize_16" />

    <TextView
        android:id="@+id/text_nickname"
        style="@style/fontBodyPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_8"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_8"
        android:contentDescription="@string/desc_avatar"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@tools:sample/avatars" />

    <ScrollView
        android:id="@+id/profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/fontBodyPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_8"
            android:text="@string/lorem_ipsum" />
    </ScrollView>

</LinearLayout>